--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 class="c">What do we have here?</h1>
   </head>
   <body class="s">
-    <img class="g" src="l.png" alt="wInc" style="width:350px;height:350px;">
+    <img class="g" src="gl.png" alt="wInc" style="width:350px;height:350px;">
   </body>
   <div class="b">
     <span class="h">bunsen#6666</span>&nbsp;<span class="x">x</span>&nbsp;<span class="p">Profit Prophets</span>
