--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
 </html>
 
 
-<!-- Good luck! Thanks for playing! -62756e73656e2336363636-->
+<!-- Good luck! Thanks for playing! -62756e73656e2336363636 -->
