--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css.css">
-    <title>Welcome!</title>
+    <title>0c2a66a1</title>
     <h1 class="c">What do we have here?</h1>
   </head>
   <body class="s">
